--- a/apps/libros/templates/libros/admin_list.html
+++ b/apps/libros/templates/libros/admin_list.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="#"> Autor </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#"> Tema </a>
+        <a class="nav-link" href="{% url 'temas:temas-admin' %}"> Tema </a>
     </li>
 
 {% endblock navbar_items %}
