--- a/apps/libros/templates/libros/libros_form.html
+++ b/apps/libros/templates/libros/libros_form.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}  Libros {% endblock %}
-
-<!--  items de navbar de administrador  -->
+{% block title %} Crear Libro {% endblock %}
 
 {% block navbar_items %}
-
     <li class="nav-item active">
         <a class="nav-link" href="{% url 'book:admin_index' %}"> Libros <span class="sr-only">(current)</span></a>
     </li>
@@ -15,13 +12,18 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'temas:temas-admin' %}"> Tema </a>
     </li>
-
-{% endblock navbar_items %}
-
+{% endblock %}
 
 {% block content %}
 
-    <h1> Administrador </h1>
-    <h1>Welcome {{user.first_name}} </h1>
+    <div class="container">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+
+            <button type="submit" class="btn btn-success"> Hecho </button>
+
+        </form>
+    </div>
 
 {% endblock %}
