--- a/apps/libros/templates/libros/libros_list_admin.html
+++ b/apps/libros/templates/libros/libros_list_admin.html
@@ -19,7 +19,7 @@
         <a href="#" class="nav-link"> Prestamos </a>
     </li>
     <li class="nav-item">
-        <a href="#" class="nav-link"> Usuarios </a>
+        <a class="nav-link" href="{% url 'usuarios:list-users' %}" > Usuarios </a> 
     </li>
 
 {% endblock navbar_items %}
