--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="shortcut icon" href="{% static 'global/favicon.ico' %}" type="image/x-icon">
+    <script src="{% static 'js/jquery.min.js' %}" ></script>
     <script src="{% static 'js/index.js' %}"></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
