--- a/apps/autores/templates/autores/author_list_user.html
+++ b/apps/autores/templates/autores/author_list_user.html
@@ -8,10 +8,10 @@
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'book:user_index' %}">Libros <span class="sr-only">(current)</span></a>
     </li> 
-    <li class="nav-item ">
+    <li class="nav-item active ">
         <a class="nav-link" href="{% url 'autor:autores-user' %}">Autores </a>
     </li>
-    <li class="nav-item active">
+    <li class="nav-item ">
         <a class="nav-link" href="{% url 'temas:temas-user' %}">Temas </a>
     </li>
     <li class="nav-item">
@@ -41,12 +41,12 @@
         <tbody>
             {% for autor in Autor %}
                 <tr>
-                    <th scope="row"> {{ autor.id }} </th>
+                    <th scope="row"> {{ forloop.counter }} </th>
                     <th> {{ autor.nombre }} </th>
                     <th> {{ autor.apellido }} </th>
                     <th> {{ autor.nacionalidad }} </th>
                     <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
-                    <th> <a href="#" class="btn btn-info"> Ver </a></th>
+                    <th> <a href="{% url 'autor:prueba' autor.id %}" class="btn btn-info"> Ver </a></th>
                 </tr>   
                 {% empty %}
                 <div class="container mt-2">
