--- a/apps/libros/templates/libros/user_list.html
+++ b/apps/libros/templates/libros/user_list.html
@@ -5,18 +5,19 @@
     <li class="nav-item active">
         <a class="nav-link" href="{% url 'book:user_index' %}">Libros <span class="sr-only">(current)</span></a>
     </li> 
-    <li class="nav-item ">
+    <li class="nav-item  ">
         <a class="nav-link" href="{% url 'autor:autores-user' %}">Autores </a>
     </li>
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'temas:temas-user' %}">Temas </a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Prestamos</a>
-    </li>
     <li class="nav-item ">
+        <a class="nav-link" href="{% url 'prestamos:prestamos-list' %}">Prestamos</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="{% url 'usuarios:user-edit' request.user.id %}">Perfil </a>
     </li>
+
 {% endblock %}
 
 {% block title %}  Libros {% endblock %}
@@ -25,7 +26,7 @@
 {% block content %}
 
     <div class="container mt-3">
-        <table class="table table-hover">
+        <table class="table table-hover" id="table-controller">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col" > #  </th>
@@ -46,7 +47,7 @@
                     <th> {{ libro.tema }} </th>
                     <th> {{ libro.ubicacion }} </th>
                     <th> {{ libro.disponibles }} </th>
-                    <th> <a href="#" class="btn btn-info"> Prestar </a> </th>
+                    <th> <a href="{% url 'prestamos:pre-prestamo' libro.id %}" class="btn btn-info"> Prestar </a> </th>
                 </tr>
                 {% endfor %}
             </tbody>
