--- a/apps/autores/templates/autores/author_list_user.html
+++ b/apps/autores/templates/autores/author_list_user.html
@@ -8,18 +8,19 @@
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'book:user_index' %}">Libros <span class="sr-only">(current)</span></a>
     </li> 
-    <li class="nav-item active ">
+    <li class="nav-item  active">
         <a class="nav-link" href="{% url 'autor:autores-user' %}">Autores </a>
     </li>
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'temas:temas-user' %}">Temas </a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Prestamos</a>
+    <li class="nav-item ">
+        <a class="nav-link" href="{% url 'prestamos:prestamos-list' %}">Prestamos</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'usuarios:user-edit' request.user.id %}">Perfil </a>
     </li>
+
 {% endblock %}
 
 {% block content %} 
@@ -27,13 +28,14 @@
 
 
 <div class="container">
-    <table class="table table-hover mt-3">
+    <table class="table table-hover mt-3" id="table-controller">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
                 <th scope="col"> Nombres </th>
                 <th scope="col"> Apellidos </th>
                 <th scope="col">  Nacionalidad </th>
+                <th scope="col"> Libros </th>
                 <th scope="col"> Fecha de ingreso  </th>
                 <th scope="col"> Operaciones </th>
             </tr>
@@ -45,6 +47,7 @@
                     <th> {{ autor.nombre }} </th>
                     <th> {{ autor.apellido }} </th>
                     <th> {{ autor.nacionalidad }} </th>
+                    <th> {{ autor.books }} </th>
                     <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
                     <th> <a href="{% url 'autor:prueba' autor.id %}" class="btn btn-info"> Ver </a></th>
                 </tr>   
