--- a/apps/autores/templates/autores/author_prueba.html
+++ b/apps/autores/templates/autores/author_prueba.html
@@ -14,7 +14,7 @@
         <a class="nav-link" href="{% url 'temas:temas-user' %}">Temas </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Prestamos</a>
+        <a class="nav-link" href="{% url 'prestamos:prestamos-list' %}">Prestamos</a>
     </li>
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'usuarios:user-edit' request.user.id %}">Perfil </a>
@@ -27,7 +27,7 @@
 {% block content %}
 
     <div class="container mt-3">
-        <table class="table table-hover">
+        <table class="table table-hover" id="table-controller">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col" > #  </th>
