--- a/apps/temas/templates/temas/temas_list.html
+++ b/apps/temas/templates/temas/temas_list.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="container">
-        <table class="table table-hover mt-4">
+        <table class="table table-hover mt-4" id="table-controller">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col"> # </th>
