--- a/apps/temas/templates/temas/temas_list_user.html
+++ b/apps/temas/templates/temas/temas_list_user.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="{% url 'temas:temas-user' %}">Temas </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Prestamos</a>
+        <a class="nav-link" href="{% url 'prestamos:prestamos-list' %}">Prestamos</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'usuarios:user-edit' request.user.id %}">Perfil </a>
@@ -26,7 +26,7 @@
 {% block content %}
 
     <div class="container">
-        <table class="table table-hover mt-4">
+        <table class="table table-hover mt-4" id="table-controller">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col"> # </th>
