--- a/usuarios/templates/usuarios/edit_user.html
+++ b/usuarios/templates/usuarios/edit_user.html
@@ -14,7 +14,7 @@
         <a class="nav-link" href="{% url 'temas:temas-user' %}">Temas </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Prestamos</a>
+        <a class="nav-link" href="{% url 'prestamos:prestamos-list' %}">Prestamos</a>
     </li>
     <li class="nav-item active">
         <a class="nav-link" href="{% url 'usuarios:user-edit' request.user.id %}">Perfil </a>
@@ -28,11 +28,19 @@
         {% csrf_token %}
         <div class="form-group col-md-10 mx-auto">
         {{ form.as_p }}
-        <button type="submit" class="btn btn-md btn-block btn-success mb-3  "> Change </button>
+
+            <div class="container" >
+                <button type="submit" class="btn btn-primary col-md-5"> Change </button>
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                <a href="{% url 'book:user_index' %}" class="btn btn-danger col-md-5"> Cancel </a>
+            </div> 
+
         </div>
         
         </form> 
-        
+
+                 
+                  
     </div>
 
     <script>
