--- a/apps/libros/templates/libros/libros_list_admin.html
+++ b/apps/libros/templates/libros/libros_list_admin.html
@@ -16,7 +16,7 @@
         <a class="nav-link" href="{% url 'temas:temas-admin' %}"> Tema </a>
     </li>
     <li class="nav-item">
-        <a href="#" class="nav-link"> Prestamos </a>
+        <a href="{% url 'prestamos:prestamo-admin' %}" class="nav-link"> Prestamos </a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'usuarios:list-users' %}" > Usuarios </a> 
