--- a/apps/autores/templates/autores/author_list_user.html
+++ b/apps/autores/templates/autores/author_list_user.html
@@ -59,6 +59,29 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                {% if page_obj.has_previous %}
+
+                    <li class="page-item"> <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Previous">&laquo;</a></li>
+                {% else %}
+                <li class="disabled"><span class="page-link">&laquo; </span> </li>
+                {% endif %}
+                {% for i in paginator.page_range %}
+                    {% if page_obj.number == i %}
+                        <li class="active page-item"><span class="page-link"> {{ i }} <span class="sr-only">current</span></span></li>
+                    {% else %}
+                        <li class="page-item"><a href="?page={{ i }}" class="page-link"> {{ i }} </a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo;</a></li>
+                {% else %}
+                    <li class="disabled" class="page-item"> <span class="page-link">&raquo;</span> </li>
+                {% endif %}
+            </ul>
+        </nav>
 </div>
 
 
