--- a/apps/temas/templates/temas/temas_list_user.html
+++ b/apps/temas/templates/temas/temas_list_user.html
@@ -38,10 +38,10 @@
             <tbody>
                 {% for tema in Temas %}
                     <tr>
-                        <th scope="row">{{ forloop.counter }}</th>
+                        <th scope="row">{{ tema.id }}</th>
                         <th> {{ tema.tema }}</th>
                         <th> {{ tema.fecha_ingreso }} </th>
-                        <th> <a href="#" class="btn btn-warning" >Ver  </a></th>
+                        <th> <a href="{% url 'temas:libro-tema' tema.id %}" class="btn btn-warning" >Ver  </a></th>
                     </tr>
                     {% empty %}
                     <div class="container mt-2">
@@ -52,6 +52,29 @@
                 
             </tbody>
         </table>
+
+        <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    {% if page_obj.has_previous %}
+
+                        <li class="page-item"> <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Previous">&laquo;</a></li>
+                    {% else %}
+                    <li class="disabled"><span class="page-link">&laquo; </span> </li>
+                    {% endif %}
+                    {% for i in paginator.page_range %}
+                        {% if page_obj.number == i %}
+                            <li class="active page-item"><span class="page-link"> {{ i }} <span class="sr-only">current</span></span></li>
+                        {% else %}
+                            <li class="page-item"><a href="?page={{ i }}" class="page-link"> {{ i }} </a></li>
+                        {% endif %}
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                        <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo;</a></li>
+                    {% else %}
+                        <li class="disabled" class="page-item"> <span class="page-link">&raquo;</span> </li>
+                    {% endif %}
+                </ul>
+            </nav>
     </div>
 
 
