--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -11,7 +11,7 @@
         <button type="submit" class="btn btn-success"> Login </button>
        
     </form>
-    {# <a href="{% url 'usuarios:sign_up_admin' %}" class="btn btn-link" align=center>Registrate como administrador</a> #}
+    <a href="{% url 'usuarios:sign_up_admin' %}" class="btn btn-link" align=center>Registrate como administrador</a> 
     <a href="{% url 'usuarios:sign_up_user' %}" class="btn btn-link" align=center>Registrate como usuario</a>
 </div>
 
