--- a/apps/autores/templates/autores/author_list_admin.html
+++ b/apps/autores/templates/autores/author_list_admin.html
@@ -31,36 +31,37 @@
     </div>
 
     <div class="container">
-        <table class="table table-hover mt-3" id="table-controller">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col"> Nombres </th>
-                    <th scope="col"> Apellidos </th>
-                    <th scope="col">  Nacionalidad </th>
-                    <th scope="col"> Fecha de ingreso  </th>
-                    <th scope="col"> Operaciones </th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for autor in Autor %}
+        <div class="table-responsive">
+            <table class="table table-hover mt-3" id="table-controller">
+                <thead class="thead-dark">
                     <tr>
-                        <th scope="row"> {{ forloop.counter }} </th>
-                        <th> {{ autor.nombre }} </th>
-                        <th> {{ autor.apellido }} </th>
-                        <th> {{ autor.nacionalidad }} </th>
-                        <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
-                        <th> <a href="{% url 'autor:editar-autor' autor.id %}" class="btn btn-warning"> Editar </a> &nbsp; <a href="{% url 'autor:eliminar-autor' autor.id %}" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</a></th>
-                    </tr>  
-                    {% empty %}
-                    <div class="container mt-2">
-                        <li> No existen autores registrados </li>
-                    </div>
+                        <th scope="col">#</th>
+                        <th scope="col"> Nombres </th>
+                        <th scope="col"> Apellidos </th>
+                        <th scope="col">  Nacionalidad </th>
+                        <th scope="col"> Fecha de ingreso  </th>
+                        <th scope="col"> Operaciones </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for autor in Autor %}
+                        <tr>
+                            <th scope="row"> {{ forloop.counter }} </th>
+                            <th> {{ autor.nombre }} </th>
+                            <th> {{ autor.apellido }} </th>
+                            <th> {{ autor.nacionalidad }} </th>
+                            <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
+                            <th> <a href="{% url 'autor:editar-autor' autor.id %}" class="btn btn-warning"> Editar </a> &nbsp; <a href="{% url 'autor:eliminar-autor' autor.id %}" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</a></th>
+                        </tr>  
+                        {% empty %}
+                        <div class="container mt-2">
+                            <li> No existen autores registrados </li>
+                        </div>
 
-                {% endfor %}
-            </tbody>
-        </table>
-        
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
         <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                     {% if page_obj.has_previous %}
@@ -83,6 +84,7 @@
                     {% endif %}
                 </ul>
             </nav>
+        
 
     </div>
 
