--- a/apps/autores/templates/autores/author_list_user.html
+++ b/apps/autores/templates/autores/author_list_user.html
@@ -28,60 +28,63 @@
 
 
 <div class="container">
-    <table class="table table-hover mt-3" id="table-controller">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col"> Nombres </th>
-                <th scope="col"> Apellidos </th>
-                <th scope="col">  Nacionalidad </th>
-                <th scope="col"> Libros </th>
-                <th scope="col"> Fecha de ingreso  </th>
-                <th scope="col"> Operaciones </th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for autor in Autor %}
+    <div class="table-responsive">  
+        <table class="table table-hover mt-3" id="table-controller">
+            
+            <thead class="thead-dark">
                 <tr>
-                    <th scope="row"> {{ forloop.counter }} </th>
-                    <th> {{ autor.nombre }} </th>
-                    <th> {{ autor.apellido }} </th>
-                    <th> {{ autor.nacionalidad }} </th>
-                    <th> {{ autor.books }} </th>
-                    <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
-                    <th> <a href="{% url 'autor:prueba' autor.id %}" class="btn btn-info"> Ver </a></th>
-                </tr>   
-                {% empty %}
-                <div class="container mt-2">
-                    <li> No existen autores registrados </li>
-                </div>
+                    <th scope="col">#</th>
+                    <th scope="col"> Nombres </th>
+                    <th scope="col"> Apellidos </th>
+                    <th scope="col">  Nacionalidad </th>
+                    <th scope="col"> Libros </th>
+                    <th scope="col"> Fecha de ingreso  </th>
+                    <th scope="col"> Operaciones </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for autor in Autor %}
+                    <tr>
+                        <th scope="row"> {{ forloop.counter }} </th>
+                        <th> {{ autor.nombre }} </th>
+                        <th> {{ autor.apellido }} </th>
+                        <th> {{ autor.nacionalidad }} </th>
+                        <th> {{ autor.books }} </th>
+                        <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
+                        <th> <a href="{% url 'autor:prueba' autor.id %}" class="btn btn-info"> Ver </a></th>
+                    </tr>   
+                    {% empty %}
+                    <div class="container mt-2">
+                        <li> No existen autores registrados </li>
+                    </div>
 
-            {% endfor %}
-        </tbody>
-    </table>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
     <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous %}
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
 
-                    <li class="page-item"> <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Previous">&laquo;</a></li>
+                <li class="page-item"> <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Previous">&laquo;</a></li>
+            {% else %}
+            <li class="disabled"><span class="page-link">&laquo; </span> </li>
+            {% endif %}
+            {% for i in paginator.page_range %}
+                {% if page_obj.number == i %}
+                    <li class="active page-item"><span class="page-link"> {{ i }} <span class="sr-only">current</span></span></li>
                 {% else %}
-                <li class="disabled"><span class="page-link">&laquo; </span> </li>
+                    <li class="page-item"><a href="?page={{ i }}" class="page-link"> {{ i }} </a></li>
                 {% endif %}
-                {% for i in paginator.page_range %}
-                    {% if page_obj.number == i %}
-                        <li class="active page-item"><span class="page-link"> {{ i }} <span class="sr-only">current</span></span></li>
-                    {% else %}
-                        <li class="page-item"><a href="?page={{ i }}" class="page-link"> {{ i }} </a></li>
-                    {% endif %}
-                {% endfor %}
-                {% if page_obj.has_next %}
-                    <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo;</a></li>
-                {% else %}
-                    <li class="disabled" class="page-item"> <span class="page-link">&raquo;</span> </li>
-                {% endif %}
-            </ul>
-        </nav>
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo;</a></li>
+            {% else %}
+                <li class="disabled" class="page-item"> <span class="page-link">&raquo;</span> </li>
+            {% endif %}
+        </ul>
+    </nav>
 </div>
 
 
