--- a/apps/autores/templates/autores/author_prueba.html
+++ b/apps/autores/templates/autores/author_prueba.html
@@ -27,33 +27,37 @@
 {% block content %}
 
     <div class="container mt-3">
-        <table class="table table-hover" id="table-controller">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col" > #  </th>
-                    <th scope="col" > Libro </th>
-                    <th scope="col" > Autor </th>
-                    <th scope="col" > Tema </th>
-                    <th scope="col" > Ubicacion </th>
-                    <th scope="col" > Disponibles </th>
-                    <th scope="col" > Operaciones </th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for book in Book %}
+        <div class="table-responsive">    
+            <table class="table table-hover" id="table-controller">
+                <thead class="thead-dark">
                     <tr>
-                        <th scope="col"> {{ forloop.counter }} </th>
-                        <th> {{ book.titulo }} </th>
-                        <th> {{ book.autor }} </th>
-                        <th> {{ book.tema }} </th>
-                        <th> {{ book.ubicacion }} </th>
-                        
-                        <th> {{ book.disponibles }} </th>
-                        <th> <a href="{% url 'prestamos:pre-prestamo' book.id %}" class="btn btn-info"> Prestar </a> </th>
+                        <th scope="col" > #  </th>
+                        <th scope="col" > Libro </th>
+                        <th scope="col" > Autor </th>
+                        <th scope="col" > Tema </th>
+                        <th scope="col" > Ubicacion </th>
+                        <th scope="col" > Disponibles </th>
+                        <th scope="col" > Operaciones </th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {% for book in Book %}
+                        <tr>
+                            <th scope="col"> {{ forloop.counter }} </th>
+                            <th> {{ book.titulo }} </th>
+                            <th> {{ book.autor }} </th>
+                            <th> {{ book.tema }} </th>
+                            <th> {{ book.ubicacion }} </th>
+                            
+                            <th> {{ book.disponibles }} </th>
+                            <th> <a href="{% url 'prestamos:pre-prestamo' book.id %}" class="btn btn-info"> Prestar </a> </th>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        
     </div>
 
 {% endblock %}
