--- a/apps/prestamos/templates/prestamos/prestamo_list_admin.html
+++ b/apps/prestamos/templates/prestamos/prestamo_list_admin.html
@@ -26,6 +26,7 @@
 
 
 <div class="container mt-3" style="height: 350px;">
+    <div class="table-respon">
     <table class="table table-hover" id="table-controller">
         <thead class="thead-dark">
             <tr>
@@ -71,6 +72,7 @@
             </tbody>
         </thead>
     </table>
+    </div>
 
     <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
