--- a/apps/temas/templates/temas/libros_de_temas.html
+++ b/apps/temas/templates/temas/libros_de_temas.html
@@ -27,6 +27,7 @@
 {% block content %}
 
     <div class="container mt-3">
+        <div class="table-responsive">
         <table class="table table-hover" id="table-controller">
             <thead class="thead-dark">
                 <tr>
@@ -54,6 +55,7 @@
                 {% endfor %}
             </tbody>
         </table>
+    </div>
     </div>
 
 {% endblock %}
