--- a/apps/temas/templates/temas/temas_list.html
+++ b/apps/temas/templates/temas/temas_list.html
@@ -31,6 +31,7 @@
     </div>
 
     <div class="container">
+        <div class="table-responsive">
         <table class="table table-hover mt-4" id="table-controller">
             <thead class="thead-dark">
                 <tr>
@@ -57,6 +58,7 @@
                 
             </tbody>
         </table>
+    </div>
 
         <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
