--- a/apps/temas/templates/temas/temas_list_user.html
+++ b/apps/temas/templates/temas/temas_list_user.html
@@ -26,6 +26,7 @@
 {% block content %}
 
     <div class="container">
+        <div class="table-responsive">
         <table class="table table-hover mt-4" id="table-controller">
             <thead class="thead-dark">
                 <tr>
@@ -52,6 +53,7 @@
                 
             </tbody>
         </table>
+    </div>
 
         <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
